--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Baloo+Bhaina');
+
 .nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
 
 body {
