--- a/view/posts.html
+++ b/view/posts.html
@@ -1,6 +1,7 @@
-<a ng-repeat="post in posts" href="{{post.link}}">
-    <div>
-        <img src="{{post.thumb}}">
-        <h3>{{post.title}}</h3>
-    </div>
-</a>
+<div ng-repeat="post in jsonObject" ng-class="{firstPost:$first, noSticky:noSticky}">
+    <a href="{{post.data.url}}"><img src="{{post.data.thumbnail}}"></a>
+    <a href="{{post.data.url}}"><h4 class="title">{{post.data.title}}<span class="domain">({{post.data.domain}})</span></h4></a>
+    <br>
+    <p class="smallGray">submitted by <a href="https://www.reddit.com/u/{{post.data.author}}">{{post.data.author}}</a></p>
+    <p class="smallGray links"><a class="comments" href="https://www.reddit.com{{post.data.permalink}}">{{post.data.num_comments}} comments</a> share save hide report</p>
+</div>
